Fix extra links in Nav being overlapped

--- a/src/components/Nav.module.css
+++ b/src/components/Nav.module.css
@@ -51,6 +51,7 @@
   box-shadow: var(--shadow-4);
   border: 1px solid var(--gray-2);
   border-radius: var(--radius-2);
+  z-index: 1;
 
   @media (--md) {
     left: 0;
